<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!--app_name-->
    <string name="app_name">日语易学通</string>

    <!--widget_camera-->
    <string name="tips">提示</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="wait_a_moment">请稍后</string>
    <string name="waiting_for_list">获取应用列表中…</string>
    <string name="model">手机型号：</string>
    <string name="request_record_permission">给点录音权限</string>
    <string name="save_failed">保存失败</string>
    <string name="save_ok">保存成功</string>

    <!--activity_start-->
    <string name="activity_start_description">开启日语学习新世界的大门</string>

    <!--activity_login-->
    <string name="activity_login_edittext_email_hint">请输入邮箱账号</string>
    <string name="activity_login_edittext_pw_hint">请输入密码</string>
    <string name="activity_login_textview_register">立即注册</string>
    <string name="activity_login_textview_forgetpw">忘记密码</string>
    <string name="activity_login_btn_text">登 录</string>
    <string name="activity_login_failinfo_infonotfull">账号或密码不能为空！</string>
    <string name="activity_login_failinfo_infonottrue">账号或密码不正确！</string>

    <!--activity_register-->
    <string name="activity_login_failinfo_havenoinfo">您还没有填写信息！</string>
    <string name="activity_login_failinfo_havenoemail">邮箱不能为空！</string>
    <string name="activity_login_failinfo_havenopw">密码不能为空！</string>
    <string name="activity_login_failinfo_notemail">邮箱格式不正确！</string>
    <string name="activity_login_failinfo_pwallnum">密码输入有误，不能全为数字！</string>
    <string name="activity_login_failinfo_pwallletter">密码输入有误，不能全为字母！</string>
    <string name="activity_login_failinfo_email_or_pw_fail">密码输入有误，邮箱或密码输入有误，登陆失败！！</string>

    <!--activity_StudyWord-->
    <string name="activity_StudyWord_insert_newWords">添加生词表</string>


    <string name="hint_operator_name">你好</string>
    <string name="hello">Hello World, Date!</string>
    <string name="strInputAccHint">输入帐号</string>
    <string name="strAccInputLabel">帐号</string>
    <string name="strPswInputLabel">密码</string>
    <string name="login">登 录</string>
    <string name="register">注 册</string>
    <string name="account_empty">用户名为空，请重新输入！</string>
    <string name="pwd_empty">密码为空，请重新输入！</string>
    <string name="pwd_not_fit_user">密码不正确，请重新输入！</string>
    <string name="pwd_new_empty">新密码为空，请重新输入！</string>
    <string name="pwd_check_empty">密码确认为空，请重新输入！</string>
    <string name="pwd_not_the_same">密码确认不正确，请重新输入密码！</string>
    <string name="register_fail">注册用户失败，请重新尝试！</string>
    <string name="register_success">注册成功！</string>
    <string name="resetpwd_fail">密码修改失败，请重新尝试！</string>
    <string name="resetpwd_success">密码修改成功！</string>
    <string name="login_success">登陆成功！</string>
    <string name="cancel_success">注销成功！</string>
    <string name="login_fail">登录失败！请输入正确的用户名与密码！</string>
    <string name="cancel_fail">注销失败！请输入正确的用户名与密码！</string>
    <string name="name_already_exist">用户名【<xliff:g example="tom" id="id1">%1$s</xliff:g>】已存在，请重新输入！</string>
    <string name="name_not_exist">用户名【<xliff:g example="tom" id="id1">%1$s</xliff:g>】不存在，请重新输入！</string>
    <string name="user_login_success">用户：<xliff:g example="tom" id="id2">%1$s</xliff:g>登录，欢迎光临！</string>
</resources>
