<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_login_rootview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray6"
    android:onClick="onViewClick"
    android:orientation="vertical">

    <View
        android:id="@+id/status_bar_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_zero" />

    <RelativeLayout
        android:id="@+id/rl_logobg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_zero"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imv_logo"
            android:layout_width="@dimen/activity_login_logo_wh"
            android:layout_height="@dimen/activity_login_logo_wh"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/common_zero"
            android:clickable="false"
            android:focusable="false"
            android:src="@mipmap/elearnlogo_transparentbg" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_zero"
        android:layout_weight="1.5"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_login_username_margintop">

            <ImageView
                android:layout_width="@dimen/activity_login_usericon_wh"
                android:layout_height="@dimen/activity_login_usericon_wh"
                android:layout_gravity="left|center"
                android:layout_marginLeft="@dimen/activity_login_usericon_marginleft"
                android:src="@mipmap/ic_user" />

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="@dimen/activity_login_edittext_width"
                android:layout_height="@dimen/activity_login_edittext_height"
                android:maxLines="11"
                android:background="@drawable/bg_edittext_normal"
                android:hint="@string/activity_login_edittext_email_hint"
                android:inputType="number"
                android:text="1"
                android:paddingLeft="@dimen/activity_login_edittext_padding_lr"
                android:paddingRight="@dimen/activity_login_edittext_padding_lr"
                android:singleLine="true"
                android:textColor="@color/pureWhite"
                android:textColorHint="@color/pureWhite"
                android:textSize="@dimen/activity_login_edittext_textsize" />

            <ImageButton
                android:id="@+id/imbtn_delete_username"
                android:layout_width="@dimen/activity_login_usericon_marginleft"
                android:layout_height="@dimen/activity_login_usericon_marginleft"
                android:layout_gravity="right|center"
                android:layout_marginRight="@dimen/activity_login_usericon_marginleft"
                android:background="@mipmap/clear_content"
                android:onClick="onViewClick"
                android:visibility="gone" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_login_edittext_pw_margintop">

            <ImageView
                android:layout_width="@dimen/activity_login_usericon_wh"
                android:layout_height="@dimen/activity_login_usericon_wh"
                android:layout_gravity="left|center"
                android:layout_marginLeft="@dimen/activity_login_usericon_marginleft"
                android:src="@mipmap/ic_pwd" />

            <EditText
                android:id="@+id/edt_reginster_pw"
                android:layout_width="@dimen/activity_login_edittext_width"
                android:layout_height="@dimen/activity_login_edittext_height"
                android:background="@drawable/bg_edittext_normal"
                android:hint="@string/activity_login_edittext_pw_hint"
                android:text="a1"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/activity_login_edittext_padding_lr"
                android:paddingRight="@dimen/activity_login_edittext_padding_lr"
                android:singleLine="true"
                android:textColor="@color/pureWhite"
                android:textColorHint="@color/pureWhite"
                android:textSize="@dimen/activity_login_edittext_textsize" />

            <ImageButton
                android:id="@+id/imbtn_delete_pw"
                android:layout_width="@dimen/activity_login_usericon_marginleft"
                android:layout_height="@dimen/activity_login_usericon_marginleft"
                android:layout_gravity="right|center"
                android:layout_marginRight="@dimen/activity_login_usericon_marginleft"
                android:background="@mipmap/clear_content"
                android:onClick="onViewClick"
                android:visibility="gone" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_login_textview_register_margintop"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/activity_login_textview_register_height"
                android:layout_marginLeft="@dimen/activity_login_textview_register_marginleft"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onViewClick"
                android:text="@string/activity_login_textview_register"
                android:textColor="@color/pureWhite" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <TextView
                    android:id="@+id/tv_forgetpw"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/activity_login_textview_register_height"
                    android:layout_marginRight="@dimen/activity_login_textview_register_marginleft"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="onViewClick"
                    android:text="@string/activity_login_textview_forgetpw"
                    android:textColor="@color/pureWhite" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="@dimen/activity_login_btn_width"
            android:layout_height="@dimen/activity_login_btn_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_login_btn_margintop"
            android:background="@drawable/shape_btn_login"
            android:onClick="onViewClick"
            android:text="@string/activity_login_btn_text"
            android:textSize="@dimen/activity_login_edittext_textsize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--<TextView
            android:id="@+id/tv_changepw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="修改密码"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"/>-->

        <!--<Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="注销" />-->

    </LinearLayout>

</LinearLayout>
